# ifw-for-background-service

./: Dockerfile  pyproject.toml
app/: app.py  diarization_pipeline.py  diarize.py  whisper.py
